--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PaintJS</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
@@ -14,7 +16,8 @@
         </div>
         <div class="controls__btns">
             <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button></div>
+            <button id="jsSave">Save</button>
+        </div>
         <div class="controls__color" id="jscColors">
             <div class="controls__color" style="background-color:#2c2c2c;"></div>
             <div class="controls__color" style="background-color:white;"></div>
@@ -29,4 +32,5 @@
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
